Fix spacing issue with header text in mobile

--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
   max-width: 825px;
   width: 100%;
   height: 72px;
-  padding: 1rem 10px 1rem 2.5rem;
+  padding: 1rem 10px 1rem 1.5rem;
   background: url("../../assets/suggestions/mobile/background-header.png")
     no-repeat;
   background-size: cover;
